--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dependencies": {
         "@walletconnect/web3-provider": "^1.7.5",
         "@web3auth/web3auth": "^0.6.2",
+        "axios": "^0.26.1",
         "magic-sdk": "^7.0.0",
         "next": "12.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-moralis": "^1.3.2",
+        "tailwind-scrollbar-hide": "^1.1.7",
         "typeScript": "npm:typescript@^4.6.2"
     },
     "devDependencies": {
