--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "17.0.2",
         "react-moralis": "^1.3.2",
         "tailwind-scrollbar-hide": "^1.1.7",
+        "timeago-react": "^3.0.4",
         "typeScript": "npm:typescript@^4.6.2"
     },
     "devDependencies": {
